--- a/config
+++ b/config
@@ -205,11 +205,12 @@ bindsym $mod+F2 move workspace to output right
 # bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 1 -- '+5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
 # bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 1 0
 
-bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 1 -- '-5%'
-bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 1 -- '+5%'
-bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 1 0
-bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 5
-bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 5
+bindsym XF86AudioLowerVolume exec --no-startup-id /usr/bin/pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioRaiseVolume exec --no-startup-id /usr/bin/pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioMute exec --no-startup-id /usr/bin/pactl set-sink-volume @DEFAULT_SINK@ toggle
+
+bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 10
 
 exec --no-startup-id nm-applet
 exec --no-startup-id gnome-settings-daemon
