--- a/config
+++ b/config
@@ -212,8 +212,9 @@ bindsym XF86AudioMute exec --no-startup-id /usr/bin/pactl set-sink-volume @DEFAU
 bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 10
 
-exec --no-startup-id nm-applet
+exec --no-startup-id gnome-keyring-daemon
 exec --no-startup-id gnome-settings-daemon
+exec --no-startup-id nm-applet
 exec --no-startup-id dropbox start
 
 exec google-chrome
