--- a/config
+++ b/config
@@ -1,6 +1,9 @@
 set $mod Mod4
 set $i3_path /home/cljubo/.i3
 
+set $OUTPUT_E DP2
+set $OUTPUT_I eDP1
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -145,8 +148,31 @@ mode "resize" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
-
 bindsym $mod+r mode "resize"
+
+set $mode_external_pos External screen position: ↑, →, ↓, ←
+mode "$mode_external_pos" {
+        bindsym Left    exec xrandr --output $OUTPUT_E --auto --left-of $OUTPUT_I
+        bindsym Right   exec xrandr --output $OUTPUT_E --auto --right-of $OUTPUT_I
+        bindsym Up      exec xrandr --output $OUTPUT_E --auto --above $OUTPUT_I
+        bindsym Down    exec xrandr --output $OUTPUT_E --auto --below $OUTPUT_I
+        # back to normal: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+bindsym $mod+Shift+s mode "$mode_external_pos"
+
+set $mode_screen Multi-monitor setup: (e)xternal only, (i)nternal only, (c)lone, (s)eparated
+mode "$mode_screen" {
+    bindsym c exec --no-startup-id xrandr --output $OUTPUT_E --auto --output $OUTPUT_I --auto
+    bindsym e exec --no-startup-id xrandr --output $OUTPUT_E --auto --output $OUTPUT_I --off
+    bindsym i exec --no-startup-id xrandr --output $OUTPUT_I --auto --output $OUTPUT_E --off
+    bindsym s exec --no-startup-id xrandr --output $OUTPUT_I --auto && xrandr --output $OUTPUT_E --right-of $OUTPUT_I
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+Mod1+m mode "$mode_screen"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
