fixes binding for multi-monitor setup mode

--- a/config
+++ b/config
@@ -172,7 +172,7 @@ mode "$mode_screen" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym $mod+Mod1+m mode "$mode_screen"
+bindsym $mod+Shift+m mode "$mode_screen"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
