--- a/i3status.conf
+++ b/i3status.conf
@@ -14,6 +14,7 @@ general {
 
 order += "disk /"
 order += "disk /home/"
+# order += "memory_usage"
 order += "run_watch VPN"
 order += "cpu_usage"
 # order += "cpu_temperature 0"
@@ -23,12 +24,22 @@ order += "tztime local"
 order += "volume master"
 
 disk "/" {
-	format = "/%free"
+	format = "/%free "
 }
 
 disk "/home/" {
-        format = "/home %free"
+        format = " /home %free "
 }
+
+#memory_usage top {
+     #awk '/MemFree/ {printf ("%.2f MB ", $2 / 1000) }' /proc/meminfo
+#format = " %usage "
+#	format = "Memory: %phytotal total, %phyused used, %phyfree
+#		  free; Swap: %swaptotal total, %swapused used,
+#		  %swapfree free"
+#	include_buffers = 0
+#	include_caches = 0
+#}
 
 cpu_temperature 0 {
      format = " T: %degrees °C "
@@ -36,7 +47,7 @@ cpu_temperature 0 {
 }
 
 battery 1 {
-        format = " %status %percentage %remaining"
+        format = " %status %percentage %remaining "
 	format_down = "No battery"
 #         path = "/sys/class/power_supply/BAT%d/uevent"
 #         low_threshold = 10
@@ -60,8 +71,8 @@ load {
 }
 
 volume master {
-	format = "♪: %volume"
-	format_muted = "♪: muted (%volume)"
+	format = " ♪: %volume "
+	format_muted = " ♪: muted (%volume) "
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
