--- a/i3status.conf
+++ b/i3status.conf
@@ -15,7 +15,7 @@ general {
 order += "disk /"
 order += "disk /home/"
 # order += "memory_usage"
-order += "run_watch VPN"
+order += "path_exists VPN"
 order += "cpu_usage"
 # order += "cpu_temperature 0"
 order += "load"
@@ -54,8 +54,8 @@ battery 1 {
 
 }
 
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+path_exists VPN {
+        path = "/sys/class/net/tun0"
 }
 
 tztime local {
