changes rofi binding to mod+x

--- a/config
+++ b/config
@@ -247,7 +247,8 @@ bindsym $mod+Mod1+Up move workspace to output up
 bindsym $mod+Mod1+Down move workspace to output down
 
 #bindsym F12 exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu'
-bindsym F12 exec --no-startup-id rofi -show window -font "Droid Sans Mono 14" -fg "#cc5050" -bg "#222211" -hlfg "#99b964" -hlbg "#000000" -o 85
+bindsym $mod+x exec --no-startup-id rofi -show window -font "Droid Sans Mono 14" -fg "#cc5050" -bg "#222211" -hlfg "#99b964" 
+-hlbg "#000000" -o 85
 
 # bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 1 -- '-5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
 # bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 1 -- '+5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
