--- a/polybar/config
+++ b/polybar/config
@@ -20,7 +20,7 @@ alert = #bd2c40
 
 [bar/example]
 bottom = true
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 18
 ;offset-x = 1%
@@ -127,7 +127,7 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
