configuration that works with lubuntu 18.04

--- a/i3status.conf
+++ b/i3status.conf
@@ -14,10 +14,12 @@ general {
 
 order += "disk /"
 order += "disk /home/"
-# order += "memory_usage"
-order += "path_exists VPN"
+#order += "memory_usage"
+order += "wireless _first_"
+order += "ethernet _first_"
+order += "ethernet ppp0"
 order += "cpu_usage"
-# order += "cpu_temperature 0"
+order += "cpu_temperature 0"
 order += "load"
 order += "battery 1"
 order += "tztime local"
@@ -43,7 +45,7 @@ disk "/home/" {
 
 cpu_temperature 0 {
      format = " T: %degrees °C "
-     path = "/sys/devices/platform/coretemp.0/temp1_input"
+     path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
 }
 
 battery 1 {
@@ -54,8 +56,19 @@ battery 1 {
 
 }
 
-path_exists VPN {
-        path = "/sys/class/net/tun0"
+wireless _first_ {
+        format_up = "W: (%quality at %essid) %ip"
+        format_down = "W: down"
+}
+
+ethernet _first_ {
+        format_up = "E: %ip"
+        format_down = "E: down"
+}
+
+ethernet ppp0 {
+        format_up = "T: %ip"
+        format_down = "T: down"
 }
 
 tztime local {
