--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 set $mod Mod4
-set $i3_path /home/cljubo/.i3
+set $i3_path /home/cljubo/.config/i3
 
 set $OUTPUT_V DP2
 set $OUTPUT_H DP1
@@ -12,7 +12,7 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -29,7 +29,7 @@ bindsym $mod+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id j4-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -200,12 +200,12 @@ mode "$mode_bar_pos" {
 bindsym $mod+Shift+p mode "$mode_bar_pos"
 
 # Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
-# bar {
-# 	position bottom
-# 	tray_output eDP1
-#     #status_command i3status -c ~/.i3/i3status.conf
+bar {
+    position bottom
+    tray_output eDP1
+    status_command i3status -c ~/.config/i3/i3status.conf
 
-#     font pango:Source Sans Pro-10 10
+#    font pango:Source Sans Pro-10 10
 # 	# status_command i3blocks -c ~/.i3/i3blocks.conf	
 # 	# $i3-theme-bar
 
@@ -234,9 +234,9 @@ bindsym $mod+Shift+p mode "$mode_bar_pos"
 # 	# 	inactive_workspace  #542937 #47172c #aea79f
 # 	# 	urgent_workspace    #f0be50 #efb73e #0000ff
 # 	# }
-# }
+}
 
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 
 # $i3-theme-window
@@ -247,17 +247,17 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #client.unfocused        #542937 #47172c #aea79f #603944
 #client.urgent           #f0be50 #efb73e #ffffff #efb73e
 
-client.focused #000000 #014b87 #ffffff #220000
-client.unfocused #1F3331 #585858 #ECF0F1 #2C3E50
-client.focused_inactive #514163 #222222 #ECF0F1 #2C3E50
-client.urgent #3498DB #2C3E50 #ECF0F1 #2C3E50
+#client.focused #112200 #014b87 #ffffff #ff0000
+#client.unfocused #1F3331 #585858 #ECF0F1 #2C3E50
+#client.focused_inactive #514163 #113322 #ECF0F1 #2C3E50
+#client.urgent #3498DB #2C3E50 #ECF0F1 #2C3E50
 
 # $i3-background
 # exec_always --no-startup-id xsetroot -solid '#542937'
 
 # scratchpad
-bindsym $mod+m move scratchpad
-bindsym $mod+o scratchpad show
+bindsym $mod+Mod1+grave move scratchpad
+bindsym $mod+grave scratchpad show
 
 focus_follows_mouse no
 
@@ -282,15 +282,16 @@ bindsym $mod+Mod1+Up move workspace to output up
 bindsym $mod+Mod1+Down move workspace to output down
 
 #bindsym F12 exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu'
-bindsym $mod+F12 exec --no-startup-id rofi -show window -font "Droid Sans Mono 14" -fg "#cc5050" -bg "#222211" -hlfg "#99b964" -hlbg "#000000" -o 85
+#bindsym $mod+F12 exec --no-startup-id rofi -show window -font "Droid Sans Mono 14" -fg "#cc5050" -bg "#222211" -hlfg "#99b964" -hlbg "#000000" -o 85
+bindsym $mod+F12 exec --no-startup-id rofi -sidebar-mode -show drun -line 3 -eh 2 -width 70 -padding 100 -opacity "70" -bw 0 -bc -font "Droid Sans Mono 12" -rnow -no-disable-history -no-levenshtein-sort -only-match -kb-mode-next Alt+Left
 
-# bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 1 -- '-5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
+# bindsym XF86AudioLow+erVolume exec /usr/bin/pactl set-sink-volume 1 -- '-5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
 # bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 1 -- '+5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
 # bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 1 0
 
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master playback 2-
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master playback 2+
-bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -c 1 sset Master playback 2%-
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -c 1 sset Master playback 2%+
+bindsym XF86AudioMute exec --no-startup-id "amixer -c 1 sset Master toggle;amixer -c 1 sset Speaker toggle"
 
 bindsym XF86MonBrightnessUp exec --no-startup-id /usr/bin/xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec --no-startup-id /usr/bin/xbacklight -dec 10
@@ -311,8 +312,5 @@ exec --no-startup-id feh --bg-scale ~/Pictures/i3wm_wallpaper.jpg
 
 exec clipit
 
-exec google-chrome
-exec --no-startup-id xfce4-power-manager
-
-#exec /usr/bin/compton --config /home/joe/.compton.conf~.i3/config
-#exec /usr/bin/compton
+# exec google-chrome
+# exec --no-startup-id xfce4-power-manager
