--- a/i3status.conf
+++ b/i3status.conf
@@ -7,30 +7,38 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-	# output_format = "dzen2"
+	#output_format = "dzen2"
         colors = true
         interval = 5
 }
 
 order += "disk /"
 order += "disk /home/"
-#order += "memory_usage"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "ethernet ppp0"
+#order += "memory_usage top"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "load"
 order += "battery 1"
 order += "tztime local"
 order += "volume master"
+order += "wireless _first_"
+order += "ethernet _first_"
+order += "ethernet ppp0"
+order += "path_exists SSL"
+
+path_exists "SSL" {
+    path = "/opt/minus5/kiosk/cert/ssl"
+    format = "%title: %status"
+    format_down = "%title: %status"
+    # format = "[ssl]"
+}
 
 disk "/" {
 	format = "/%free "
 }
 
 disk "/home/" {
-        format = " /home %free "
+        format = "/home %free "
 }
 
 #memory_usage top {
@@ -43,36 +51,46 @@ disk "/home/" {
 #	include_caches = 0
 #}
 
+#memory_usage top {
+#format = "%free %available (%used) / %total"
+#}
+
 cpu_temperature 0 {
-     format = " T: %degrees °C "
+     format = "🌡️ %degrees °C "
      path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
 }
 
 battery 1 {
-        format = " %status %percentage %remaining "
+        format = "%status %percentage"
+#        format = "%status %percentage %remaining (%emptytime %consumption)"
 	format_down = "No battery"
+	last_full_capacity = true
+	status_chr ="⚡ CHR"
+	status_bat ="🔋 BAT"
+	status_unk = "? UNK"
+	status_full ="☻  FULL"
+	low_threshold = 30
+	threshold_type = time
 #         path = "/sys/class/power_supply/BAT%d/uevent"
-#         low_threshold = 10
-
 }
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "📶 (%quality at %essid) %ip"
+        format_down = ""
 }
 
 ethernet _first_ {
-        format_up = "E: %ip"
-        format_down = "E: down"
+        format_up = "🔌 %ip"
+        format_down = ""
 }
 
 ethernet ppp0 {
-        format_up = "T: %ip"
-        format_down = "T: down"
+        format_up = "🚇 %ip"
+        format_down = ""
 }
 
 tztime local {
-        format = " %Y-%m-%d %H:%M:%S "
+        format = "📅 %Y-%m-%d %H:%M:%S "
 }
 
 cpu_usage {
