--- a/config
+++ b/config
@@ -202,7 +202,7 @@ bindsym $mod+Shift+p mode "$mode_bar_pos"
 # Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
 bar {
     position bottom
-    tray_output eDP1
+    tray_output primary
     status_command i3status -c ~/.config/i3/i3status.conf
 
 #    font pango:Source Sans Pro-10 10
@@ -261,7 +261,7 @@ bindsym $mod+grave scratchpad show
 
 focus_follows_mouse no
 
-bindsym Control+Mod1+l exec --no-startup-id $i3_path/i3exit lock
+bindsym $mod+Control+Mod1+l exec --no-startup-id $i3_path/i3exit lock
 bindsym Mod1+Tab focus right
 bindsym Mod1+Shift+Tab focus left
 bindsym $mod+Tab workspace next
@@ -272,7 +272,7 @@ bindsym $mod+Shift+Tab workspace prev
 # $i3_path/invert_window.sh
 
 # https://github.com/zoltanp/xrandr-invert-colors
-bindsym $mod+i exec xrandr-invert-colors -s 0
+bindsym $mod+i exec invert-colors -s 0
 bindsym $mod+Shift+i exec xrandr-invert-colors -s 1
 bindsym $mod+Mod1+i exec xrandr-invert-colors -s 2
 
@@ -283,7 +283,13 @@ bindsym $mod+Mod1+Down move workspace to output down
 
 #bindsym F12 exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu'
 #bindsym $mod+F12 exec --no-startup-id rofi -show window -font "Droid Sans Mono 14" -fg "#cc5050" -bg "#222211" -hlfg "#99b964" -hlbg "#000000" -o 85
-bindsym $mod+F12 exec --no-startup-id rofi -sidebar-mode -show drun -line 3 -eh 2 -width 70 -padding 100 -opacity "70" -bw 0 -bc -font "Droid Sans Mono 12" -rnow -no-disable-history -no-levenshtein-sort -only-match -kb-mode-next Alt+Left
+#bindsym $mod+F12 exec --no-startup-id rofi \
+#	-sidebar-mode -show drun -line 3 -eh 2 -width 70 -padding 10 -opacity "70" -bw 0 -bc -font "Droid Sans Mono 12" -rnow -no-disable-history -no-levenshtein-sort -only-match \
+#	-kb-mode-next Alt+Right -kb-mode-previous Alt+Left
+bindsym $mod+F12 exec --no-startup-id rofi \
+	-sidebar-mode -show drun -no-disable-history -no-levenshtein-sort -only-match \
+	-kb-mode-next Alt+Right -kb-mode-previous Alt+Left
+
 
 # bindsym XF86AudioLow+erVolume exec /usr/bin/pactl set-sink-volume 1 -- '-5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
 # bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 1 -- '+5%' && notify-send `(pactl list sinks | grep "Volume: 0:")| awk '{print $3}'`
@@ -306,11 +312,11 @@ bindsym --release Print exec scrot 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p ~
 # OSX-like area selection screenshots
 bindsym --release Shift+Print exec scrot -s 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p ~/Pictures/screenshots && mv $f ~/Pictures/screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/screenshots/`ls -1 -t ~/Pictures/screenshots | head -1`' # Area selection
 
-exec --no-startup-id nm-applet
+exec --no-startup-id feh --bg-fill ~/Pictures/i3wm_wallpaper.jpg
+exec --no-startup-id clipit
+exec --no-startup-id xfce4-power-manager
 exec --no-startup-id dropbox start
-exec --no-startup-id feh --bg-scale ~/Pictures/i3wm_wallpaper.jpg
-
-exec clipit
+exec --no-startup-id dbus-launch nm-applet
 
 # exec google-chrome
 # exec --no-startup-id xfce4-power-manager
